# SLAM_book

ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp
ch3/examples/: plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
ch4/useSophus/: useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/rgbd/: CMakeLists.txt
ch5/stereoVision/: CMakeLists.txt  stereoVision.cpp
ch5/undistortImage/: CMakeLists.txt  undistortImage.cpp
ch6/: CMakeLists.txt  g2oCurveFitting.cpp
